--- a/public/home.html
+++ b/public/home.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a X.com</title>
+    <title>Inicio - X.com</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Bienvenido, <span id="username-placeholder"></span></h2>
-    <p>¡Has iniciado sesión correctamente!</p>
-    <!-- Aquí puedes agregar más contenido para la página de inicio -->
+    <h2>Bienvenido, <span id="username-placeholder"></span>!</h2>
+    <p id="saldo-placeholder">Saldo actual: </p>
+
     <script src="script.js"></script>
 </body>
 </html>
