--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h2>Bienvenido, <span id="username-placeholder"></span></h2>
+    <p>¡Has iniciado sesión correctamente!</p>
+    <p>Saldo actual: <span id="saldo-placeholder"></span></p>
+
+    <h3>Transferir Dinero</h3>
+    <form id="transfer-form">
+        <label for="dest-username">Usuario Destino:</label>
+        <input type="text" id="dest-username" name="dest-username" required><br>
+        
+        <label for="amount">Monto:</label>
+        <input type="number" id="amount" name="amount" step="0.01" required><br>
+        
+        <button type="submit">Transferir</button>
+    </form>
+
     <script src="script.js"></script>
 </body>
 </html>
