--- a/public/apartados.html
+++ b/public/apartados.html
@@ -18,8 +18,54 @@
         <button type="submit">Crear Apartado</button>
     </form>
 
+    <h3>Mis Apartados</h3>
+    <table id="apartados-table" border="1">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Monto</th>
+                <th>Fecha de creación</th>
+            </tr>
+        </thead>
+        <tbody id="apartados-list">
+            <!-- Las filas se agregarán aquí dinámicamente -->
+        </tbody>
+    </table>
+
     <button id="back-button">Regresar</button>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const username = new URLSearchParams(window.location.search).get('username');
+
+            fetch(`/obtener-apartados?username=${encodeURIComponent(username)}`)
+                .then(response => response.json())
+                .then(data => {
+                    const apartadosList = document.getElementById('apartados-list');
+                    if (data.apartados.length === 0) {
+                        const noDataRow = document.createElement('tr');
+                        noDataRow.innerHTML = `<td colspan="3">No hay apartados.</td>`;
+                        apartadosList.appendChild(noDataRow);
+                    } else {
+                        data.apartados.forEach(apartado => {
+                            const row = document.createElement('tr');
+                            row.innerHTML = `
+                                <td>${apartado.nombre}</td>
+                                <td>${apartado.monto}</td>
+                                <td>${apartado.fecha_creacion}</td>
+                            `;
+                            apartadosList.appendChild(row);
+                        });
+                    }
+                })
+                .catch(error => console.error('Error:', error));
+        });
+
+        document.getElementById('back-button').addEventListener('click', function() {
+            const username = new URLSearchParams(window.location.search).get('username');
+            window.location.href = `/home?username=${encodeURIComponent(username)}`;
+        });
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
