Se ha agregado boton y pestania Historial

--- a/public/home.html
+++ b/public/home.html
@@ -17,6 +17,9 @@
     <h3>Crear Apartado</h3>
     <button id="apartados-button">Ir a Apartados</button>
 
+    <h3>Historial de Transferencias</h3>
+    <button id="historial-button">Ir a Historial</button>
+    
     <script src="script.js"></script>
 </body>
 </html>
